Fix list element text alignment; add color to footer

--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -2,7 +2,11 @@
     text-align: center;
 }
 
-h1 {
+h1, footer {
     background-color: cornflowerblue;
     color: white;
+}
+
+ul, ol {
+    list-style-position: inside;
 }
